tests/snapshots/call_cli__does not include unmethylated cpgs without alts.snap
---
source: tests/call_cli.rs
info:
  program: rastair2
  args:
    - call
    - "--fasta-file=tests/data/test.fasta.gz"
    - tests/data/test.bam
    - "--region=chr19:6117965-6118004"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
##fileformat=VCFv4.2
##FILTER=<ID=PASS,Description="All filters passed">
##rastair2Version=0.1.0
##rastair2Command=call --fasta-file=tests/data/test.fasta.gz tests/data/test.bam --region=chr19:6117965-6118004
##reference="tests/data/test.fasta.gz"
##FILTER=<ID=lowDP,Description="Low read depth">
##INFO=<ID=AD,Number=R,Type=Integer,Description="Total read depth for each allele">
##INFO=<ID=BQ,Number=1,Type=Float,Description="RMS base quality">
##INFO=<ID=DP,Number=1,Type=Integer,Description="Combined depth across samples">
##INFO=<ID=MQ,Number=1,Type=Float,Description="RMS mapping quality">
##INFO=<ID=MQ0,Number=1,Type=Integer,Description="Number of MAPQ == 0 reads">
##INFO=<ID=NS,Number=1,Type=Integer,Description="Number of samples with data">
##INFO=<ID=AS_SB,Number=.,Type=Integer,Description="Strand bias per allele (tuples of [reads_ot, reads_ob] for each allele)">
##INFO=<ID=SC5,Number=1,Type=String,Description="5-base sequence context centered on the variant position">
##INFO=<ID=AF,Number=A,Type=Float,Description="Allele frequency for each ALT allele in the same order as listed (estimated from primary data, not called genotypes)">
##INFO=<ID=ABQ,Number=R,Type=Float,Description="RMS Base quality per allele">
##INFO=<ID=AMQ,Number=R,Type=Float,Description="RMS Map quality per allele">
##INFO=<ID=AS_SS_BQ,Number=.,Type=Float,Description="Strand-specific RMS of base quality per allele (tuples of [reads_ot, reads_ob] for each allele)">
##INFO=<ID=AS_SS_MQ,Number=.,Type=Float,Description="Strand-specific RMS of mapping quality per allele (tuples of [reads_ot, reads_ob] for each allele)">
##INFO=<ID=PIR,Number=R,Type=Float,Description="RMS of relative position in read">
##INFO=<ID=ENT100,Number=1,Type=Float,Description="Shannon entropy of 100bp sequence context around variant position. Value range (0..2)">
##INFO=<ID=NAB,Number=R,Type=Float,Description="RMS of number of aligned bases">
##INFO=<ID=NOI,Number=R,Type=Float,Description="RMS of number of indels">
##INFO=<ID=CPG,Number=0,Type=Flag,Description="Is this a CpG site?">
##INFO=<ID=CPGnovo,Number=0,Type=Flag,Description="De-novo CPG candidate: Could the alt alleles create a new CpG site?">
##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
##FORMAT=<ID=GL,Number=G,Type=Float,Description="Genotype likelihoods">
##FORMAT=<ID=GC,Number=G,Type=Float,Description="Genotype confidence">
##FORMAT=<ID=DP,Number=1,Type=Integer,Description="Read depth">
##FORMAT=<ID=M5mC,Number=1,Type=Float,Description="Methylation level at CpG sites">
##FORMAT=<ID=CPG_Call,Number=1,Type=Float,Description="Is a likely de-novo CPG position? (Range 0..1)">
##contig=<ID=chr19,length=0>
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	sample
chr19	6117985	.	G	T	30	.	AD=23,1;BQ=34.359;DP=24;MQ=60;MQ0=0;NS=1;AS_SB=13,10,1,0;SC5=GCGCA;AF=0.0416667;ABQ=34.9764,14;AMQ=60,60;AS_SS_BQ=34.7751,35.2363,14,0;AS_SS_MQ=60,60,60,0;PIR=0.678693,0.075;ENT100=1.80808;NAB=79.0941,72;NOI=0,0;CPG	GT:GL:GC:DP	0/0:1:0.999878:24
chr19	6117986	.	C	A	30	.	AD=20,1;BQ=33.7279;DP=21;MQ=60;MQ0=0;NS=1;AS_SB=12,8,1,0;SC5=CGCAG;AF=0.047619;ABQ=34.4187,14;AMQ=60,60;AS_SS_BQ=34.3754,34.4837,14,0;AS_SS_MQ=60,60,60,0;PIR=0.6305,0.0875;ENT100=1.80808;NAB=79.2569,72;NOI=0,0	GT:GL:GC:DP	0/0:1:0.996094:21
chr19	6117987	.	A	C	30	.	AD=19,2;BQ=31.1165;DP=21;MQ=60;MQ0=0;NS=1;AS_SB=12,7,1,1;SC5=GCAGC;AF=0.0952381;ABQ=32.3964,14;AMQ=60,60;AS_SS_BQ=30.8396,34.9039,14,14;AS_SS_MQ=60,60,60,60;PIR=0.61011,0.766274;ENT100=1.80808;NAB=78.9697,78.5143;NOI=0,0;CPGnovo	DP	21
chr19	6117992	.	C	A	30	.	AD=19,1;BQ=34.2403;DP=20;MQ=60;MQ0=0;NS=1;AS_SB=12,7,1,0;SC5=CTCCA;AF=0.05;ABQ=34.9827,14;AMQ=60,60;AS_SS_BQ=34.3754,36,14,0;AS_SS_MQ=60,60,60,0;PIR=0.676053,0.1625;ENT100=1.80808;NAB=79.3739,72;NOI=0,0	GT:GL:GC:DP	0/0:1:0.992188:20

----- stderr -----
[TIME] INFO rastair2::call: Wrote output file="-"
[TIME] INFO rastair2: Call finished [DURATION]
