tests/snapshots/call_cli__guess_read_orientation_stays_close_to_flag_strand_calls@seqair.snap
---
source: tests/call_cli.rs
expression: summary
---
CpgEvidenceComparisonSummary { flag_calls: 62, evidence_calls: 62, shared_calls: 62, flag_only: 0, evidence_only: 0, mod_diff_positions: 4, unmod_diff_positions: 40, mean_abs_beta_diff: 0.06322580645161288, max_abs_beta_diff: 0.23000000000000004, mean_abs_mod_diff: 0.06451612903225806, max_abs_mod_diff: 1, mean_abs_unmod_diff: 0.9032258064516129, max_abs_unmod_diff: 4, largest_beta_diffs: [CpgEvidenceDiff { pos: 6104658, strand: '+', flag_beta: 0.67, evidence_beta: 0.44, beta_abs_diff: 0.23000000000000004, flag_mod: 4, evidence_mod: 4, mod_abs_diff: 0, flag_unmod: 2, evidence_unmod: 5, unmod_abs_diff: 3 }, CpgEvidenceDiff { pos: 6104086, strand: '-', flag_beta: 1.0, evidence_beta: 0.8, beta_abs_diff: 0.19999999999999996, flag_mod: 4, evidence_mod: 4, mod_abs_diff: 0, flag_unmod: 0, evidence_unmod: 1, unmod_abs_diff: 1 }, CpgEvidenceDiff { pos: 6103215, strand: '-', flag_beta: 0.75, evidence_beta: 0.56, beta_abs_diff: 0.18999999999999995, flag_mod: 9, evidence_mod: 9, mod_abs_diff: 0, flag_unmod: 3, evidence_unmod: 7, unmod_abs_diff: 4 }, CpgEvidenceDiff { pos: 6103627, strand: '+', flag_beta: 0.86, evidence_beta: 0.67, beta_abs_diff: 0.18999999999999995, flag_mod: 6, evidence_mod: 6, mod_abs_diff: 0, flag_unmod: 1, evidence_unmod: 3, unmod_abs_diff: 2 }, CpgEvidenceDiff { pos: 6105712, strand: '-', flag_beta: 0.67, evidence_beta: 0.5, beta_abs_diff: 0.17000000000000004, flag_mod: 4, evidence_mod: 4, mod_abs_diff: 0, flag_unmod: 2, evidence_unmod: 4, unmod_abs_diff: 2 }, CpgEvidenceDiff { pos: 6104659, strand: '-', flag_beta: 0.67, evidence_beta: 0.83, beta_abs_diff: 0.15999999999999992, flag_mod: 10, evidence_mod: 10, mod_abs_diff: 0, flag_unmod: 5, evidence_unmod: 2, unmod_abs_diff: 3 }, CpgEvidenceDiff { pos: 6104501, strand: '-', flag_beta: 0.75, evidence_beta: 0.6, beta_abs_diff: 0.15000000000000002, flag_mod: 6, evidence_mod: 6, mod_abs_diff: 0, flag_unmod: 2, evidence_unmod: 4, unmod_abs_diff: 2 }, CpgEvidenceDiff { pos: 6104500, strand: '+', flag_beta: 0.79, evidence_beta: 0.92, beta_abs_diff: 0.13, flag_mod: 11, evidence_mod: 11, mod_abs_diff: 0, flag_unmod: 3, evidence_unmod: 1, unmod_abs_diff: 2 }, CpgEvidenceDiff { pos: 6105711, strand: '+', flag_beta: 0.67, evidence_beta: 0.8, beta_abs_diff: 0.13, flag_mod: 8, evidence_mod: 8, mod_abs_diff: 0, flag_unmod: 4, evidence_unmod: 2, unmod_abs_diff: 2 }, CpgEvidenceDiff { pos: 6103214, strand: '+', flag_beta: 0.44, evidence_beta: 0.57, beta_abs_diff: 0.12999999999999995, flag_mod: 8, evidence_mod: 8, mod_abs_diff: 0, flag_unmod: 10, evidence_unmod: 6, unmod_abs_diff: 4 }] }
