tests/snapshots/call_cli__includes all cpgs.snap
---
source: tests/call_cli.rs
info:
  program: rastair2
  args:
    - call
    - "--fasta-file=tests/data/test.fasta.gz"
    - tests/data/test.bam
    - "--region=chr19:6117965-6118004"
    - "--thresholds"
    - "--vcf"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
##fileformat=VCFv4.2
##FILTER=<ID=PASS,Description="All filters passed">
##rastairVersion=0.1.0
##rastairCommand=call --fasta-file=tests/data/test.fasta.gz tests/data/test.bam --region=chr19:6117965-6118004 --thresholds --vcf
##rastairConfig={"variant_calling":{"error_model":"Novaseq6000","keep_overlapping_reads":false,"cpgs_only":false,"quality":{"min_mapq":1,"min_baseq":10},"read_masking":{"n_ot":{"r1":{"from_start":0,"from_end":0},"r2":{"from_start":0,"from_end":0}},"n_ob":{"r1":{"from_start":0,"from_end":0},"r2":{"from_start":0,"from_end":0}}},"read_flags":{"include_flags":3,"exclude_flags":3852}},"denovo_cpg":{"cpg_novo_min_depth":2,"cpg_novo_min_baseq":15.0,"cpg_novo_min_mapq":50.0,"cpg_novo_min_vaf":0.2},"methylation":{"skip_methylation_calling":false,"thresholds":{"m_vaf_min":0.2,"m_min_depth":3,"m_min_denovo_depth":2,"m_bq_ratio_min":0.27,"m_read_position_min":0.2,"m_read_position_max":0.8,"m_max_coverage":1000}},"ml":{"no_ml":true,"ml":0.8}}
##reference="tests/data/test.fasta.gz"
##FILTER=<ID=lowDp,Description="Low read depth">
##FILTER=<ID=dnCpG_lowDp,Description="Low read depth for de-novo CpG candidate">
##FILTER=<ID=dnCpG_bq,Description="Low base quality for de-novo CpG candidate">
##FILTER=<ID=dnCpG_mapq,Description="Low mapping quality for de-novo CpG candidate">
##FILTER=<ID=dnCpG_vaf,Description="Low variant allele frequency for de-novo CpG candidate">
##FILTER=<ID=m_vaf,Description="Low variant allele frequency for methylation candidate">
##FILTER=<ID=m_bq_ratio,Description="Low quality ratio for methylation candidate">
##FILTER=<ID=m_pos,Description="Alt allele evidence from read edges for methylation candidate">
##FILTER=<ID=m_highDp,Description="Excessive coverage for methylation candidate">
##FILTER=<ID=low_ml_score,Description="Machine Learning module prediction below threshold">
##INFO=<ID=AD,Number=R,Type=Integer,Description="Total read depth for each allele">
##INFO=<ID=BQ,Number=1,Type=Float,Description="RMS base quality">
##INFO=<ID=DP,Number=1,Type=Integer,Description="Combined depth across samples">
##INFO=<ID=MQ,Number=1,Type=Float,Description="RMS mapping quality">
##INFO=<ID=MQ0,Number=1,Type=Integer,Description="Number of MAPQ == 0 reads">
##INFO=<ID=NS,Number=1,Type=Integer,Description="Number of samples with data">
##INFO=<ID=AS_SB_OT,Number=R,Type=Integer,Description="OT counts per allele">
##INFO=<ID=AS_SB_OB,Number=R,Type=Integer,Description="OB counts per allele">
##INFO=<ID=SC5,Number=1,Type=String,Description="5-base sequence context centered on the variant position">
##INFO=<ID=AF,Number=A,Type=Float,Description="Allele frequency for each ALT allele in the same order as listed (estimated from primary data, not called genotypes)">
##INFO=<ID=ABQ,Number=R,Type=Float,Description="RMS Base quality per allele">
##INFO=<ID=AMQ,Number=R,Type=Float,Description="RMS Map quality per allele">
##INFO=<ID=AS_SS_BQ_OT,Number=R,Type=Float,Description="Strand-specific RMS of base quality per allele on the original top strand">
##INFO=<ID=AS_SS_BQ_OB,Number=R,Type=Float,Description="Strand-specific RMS of base quality per allele on the original bottom strand">
##INFO=<ID=AS_SS_MQ,Number=.,Type=Float,Description="Strand-specific RMS of mapping quality per allele (tuples of [reads_ot, reads_ob] for each allele)">
##INFO=<ID=PIR,Number=R,Type=Float,Description="RMS of relative position in read">
##INFO=<ID=ENT100,Number=1,Type=Float,Description="Shannon entropy of 100bp sequence context around variant position. Value range (0..2)">
##INFO=<ID=NAB,Number=R,Type=Float,Description="RMS of number of aligned bases">
##INFO=<ID=NOI,Number=R,Type=Float,Description="RMS of number of indels">
##INFO=<ID=CPG,Number=0,Type=Flag,Description="Is this a CpG site?">
##INFO=<ID=CPGnovo,Number=0,Type=Flag,Description="De-novo CPG candidate: Could the alt alleles create a new CpG site?">
##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
##FORMAT=<ID=GL,Number=G,Type=Integer,Description="Genotype likelihoods, Phred-scaled">
##FORMAT=<ID=GC,Number=G,Type=Integer,Description="Genotype confidence, Phred-scaled">
##FORMAT=<ID=DP,Number=1,Type=Integer,Description="Read depth">
##FORMAT=<ID=M5mC,Number=1,Type=Float,Description="Methylation level at CpG sites">
##FORMAT=<ID=ML,Number=A,Type=Float,Description="Prediction of methylation/variant likelyhood by Rastair's by machine learning model">
##contig=<ID=chr19,length=39>
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	sample
chr19	6117975	.	C	.	30	PASS	AD=23;BQ=35.1617;DP=23;MQ=60;MQ0=0;NS=1;AS_SB_OT=11;AS_SB_OB=12;SC5=AGCGT;ABQ=35.1617;AMQ=60;AS_SS_BQ_OT=35.6549;AS_SS_BQ_OB=34.7035;AS_SS_MQ=60,60;PIR=0.631944;ENT100=1.83505;NAB=79.0072;NOI=0;CPG	GT:GL:GC:DP:M5mC	0/0:99:36:23:0
chr19	6117976	.	G	.	30	PASS	AD=23;BQ=35.67;DP=23;MQ=60;MQ0=0;NS=1;AS_SB_OT=11;AS_SB_OB=12;SC5=GCGTG;ABQ=35.67;AMQ=60;AS_SS_BQ_OT=35.6549;AS_SS_BQ_OB=35.6838;AS_SS_MQ=60,60;PIR=0.643293;ENT100=1.83505;NAB=79.0072;NOI=0;CPG	GT:GL:GC:DP:M5mC	0/0:99:33:23:0
chr19	6117984	.	C	.	30	PASS	AD=24;BQ=35.0196;DP=24;MQ=60;MQ0=0;NS=1;AS_SB_OT=14;AS_SB_OB=10;SC5=AGCGC;ABQ=35.0196;AMQ=60;AS_SS_BQ_OT=34.864;AS_SS_BQ_OB=35.2363;AS_SS_MQ=60,60;PIR=0.653496;ENT100=1.83505;NAB=78.8112;NOI=0;CPG	GT:GL:GC:DP:M5mC	0/0:99:30:24:0
chr19	6117985	.	G	T	30	PASS	AD=23,1;BQ=34.359;DP=24;MQ=60;MQ0=0;NS=1;AS_SB_OT=13,1;AS_SB_OB=10,0;SC5=GCGCA;AF=0.0416667;ABQ=34.9764,14;AMQ=60,60;AS_SS_BQ_OT=34.7751,14;AS_SS_BQ_OB=35.2363,0;AS_SS_MQ=60,60,60,0;PIR=0.678693,0.075;ENT100=1.83505;NAB=79.0941,72;NOI=0,0;CPG	GT:GL:GC:DP:M5mC	0/0:99:39:24:0
chr19	6117986	.	C	A	30	PASS	AD=20,1;BQ=33.7279;DP=21;MQ=60;MQ0=0;NS=1;AS_SB_OT=12,1;AS_SB_OB=8,0;SC5=CGCAG;AF=0.047619;ABQ=34.4187,14;AMQ=60,60;AS_SS_BQ_OT=34.3754,14;AS_SS_BQ_OB=34.4837,0;AS_SS_MQ=60,60,60,0;PIR=0.6305,0.0875;ENT100=1.83505;NAB=79.2569,72;NOI=0,0	GT:GL:GC:DP	0/0:99:24:21
chr19	6117987	.	A	C	30	dnCpG_vaf;m_vaf;m_bq_ratio	AD=19,2;BQ=31.1165;DP=21;MQ=60;MQ0=0;NS=1;AS_SB_OT=12,1;AS_SB_OB=7,1;SC5=GCAGC;AF=0.0952381;ABQ=32.3964,14;AMQ=60,60;AS_SS_BQ_OT=30.8396,14;AS_SS_BQ_OB=34.9039,14;AS_SS_MQ=60,60,60,60;PIR=0.61011,0.766274;ENT100=1.83505;NAB=78.9697,78.5143;NOI=0,0;CPGnovo	DP:M5mC	21:0
chr19	6117992	.	C	A	30	PASS	AD=19,1;BQ=34.2403;DP=20;MQ=60;MQ0=0;NS=1;AS_SB_OT=12,1;AS_SB_OB=7,0;SC5=CTCCA;AF=0.05;ABQ=34.9827,14;AMQ=60,60;AS_SS_BQ_OT=34.3754,14;AS_SS_BQ_OB=36,0;AS_SS_MQ=60,60,60,0;PIR=0.676053,0.1625;ENT100=1.83505;NAB=79.3739,72;NOI=0,0	GT:GL:GC:DP	0/0:99:21:20
chr19	6118002	.	C	.	30	PASS	AD=19;BQ=33.5104;DP=19;MQ=60;MQ0=0;NS=1;AS_SB_OT=14;AS_SB_OB=5;SC5=GTCGC;ABQ=33.5104;AMQ=60;AS_SS_BQ_OT=32.5752;AS_SS_BQ_OB=36;AS_SS_MQ=60,60;PIR=0.569953;ENT100=1.83505;NAB=79.1271;NOI=0;CPG	GT:GL:GC:DP:M5mC	0/0:99:15:19:0
chr19	6118003	.	G	.	30	PASS	AD=18;BQ=34.049;DP=18;MQ=60;MQ0=0;NS=1;AS_SB_OT=13;AS_SB_OB=5;SC5=TCGCT;ABQ=34.049;AMQ=60;AS_SS_BQ_OT=33.5811;AS_SS_BQ_OB=35.2363;AS_SS_MQ=60,60;PIR=0.547962;ENT100=1.83505;NAB=79.0784;NOI=0;CPG	GT:GL:GC:DP:M5mC	0/0:99:39:18:0

----- stderr -----
[TIME] INFO rastair2::call: Wrote VCF output file="-"
[TIME] INFO rastair2: Call finished [DURATION]
