tests/snapshots/call_cli__pipe_to_stdout.snap
---
source: tests/call_cli.rs
info:
  program: rastair2
  args:
    - call
    - "--fasta-file=tests/data/test.fasta.gz"
    - tests/data/test.bam
    - "--region=chr19:6105700-6105750"
    - "--vcf"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
##fileformat=VCFv4.2
##FILTER=<ID=PASS,Description="All filters passed">
##rastair2Version=0.1.0
##rastair2Command=call --fasta-file=tests/data/test.fasta.gz tests/data/test.bam --region=chr19:6105700-6105750 --vcf
##reference="tests/data/test.fasta.gz"
##FILTER=<ID=lowDp,Description="Low read depth">
##FILTER=<ID=dnCpG_lowDp,Description="Low read depth for de-novo CpG candidate">
##FILTER=<ID=dnCpG_bq,Description="Low base quality for de-novo CpG candidate">
##FILTER=<ID=dnCpG_mapq,Description="Low mapping quality for de-novo CpG candidate">
##FILTER=<ID=dnCpG_vaf,Description="Low variant allele frequency for de-novo CpG candidate">
##FILTER=<ID=m_vaf,Description="Low variant allele frequency for methylation candidate">
##FILTER=<ID=m_bq_ratio,Description="Low quality ratio for methylation candidate">
##FILTER=<ID=m_pos,Description="Alt allele evidence from read edges for methylation candidate">
##FILTER=<ID=m_highDp,Description="Excessive coverage for methylation candidate">
##FILTER=<ID=low_ml_score,Description="Machine Learning module prediction below threshold">
##INFO=<ID=AD,Number=R,Type=Integer,Description="Total read depth for each allele">
##INFO=<ID=BQ,Number=1,Type=Float,Description="RMS base quality">
##INFO=<ID=DP,Number=1,Type=Integer,Description="Combined depth across samples">
##INFO=<ID=MQ,Number=1,Type=Float,Description="RMS mapping quality">
##INFO=<ID=MQ0,Number=1,Type=Integer,Description="Number of MAPQ == 0 reads">
##INFO=<ID=NS,Number=1,Type=Integer,Description="Number of samples with data">
##INFO=<ID=AS_SB,Number=.,Type=Integer,Description="Strand bias per allele (tuples of [reads_ot, reads_ob] for each allele)">
##INFO=<ID=SC5,Number=1,Type=String,Description="5-base sequence context centered on the variant position">
##INFO=<ID=AF,Number=A,Type=Float,Description="Allele frequency for each ALT allele in the same order as listed (estimated from primary data, not called genotypes)">
##INFO=<ID=ABQ,Number=R,Type=Float,Description="RMS Base quality per allele">
##INFO=<ID=AMQ,Number=R,Type=Float,Description="RMS Map quality per allele">
##INFO=<ID=AS_SS_BQ,Number=.,Type=Float,Description="Strand-specific RMS of base quality per allele (tuples of [reads_ot, reads_ob] for each allele)">
##INFO=<ID=AS_SS_MQ,Number=.,Type=Float,Description="Strand-specific RMS of mapping quality per allele (tuples of [reads_ot, reads_ob] for each allele)">
##INFO=<ID=PIR,Number=R,Type=Float,Description="RMS of relative position in read">
##INFO=<ID=ENT100,Number=1,Type=Float,Description="Shannon entropy of 100bp sequence context around variant position. Value range (0..2)">
##INFO=<ID=NAB,Number=R,Type=Float,Description="RMS of number of aligned bases">
##INFO=<ID=NOI,Number=R,Type=Float,Description="RMS of number of indels">
##INFO=<ID=CPG,Number=0,Type=Flag,Description="Is this a CpG site?">
##INFO=<ID=CPGnovo,Number=0,Type=Flag,Description="De-novo CPG candidate: Could the alt alleles create a new CpG site?">
##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
##FORMAT=<ID=GL,Number=G,Type=Float,Description="Genotype likelihoods">
##FORMAT=<ID=GC,Number=G,Type=Float,Description="Genotype confidence">
##FORMAT=<ID=DP,Number=1,Type=Integer,Description="Read depth">
##FORMAT=<ID=M5mC,Number=1,Type=Float,Description="Methylation level at CpG sites">
##FORMAT=<ID=ML,Number=A,Type=Float,Description="Prediction of methylation/variant likelyhood by Rastair's by machine learning model">
##contig=<ID=chr19,length=50>
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	sample
chr19	6105712	.	C	T	30	PASS	AD=10,8;BQ=35.5778;DP=18;MQ=60;MQ0=0;NS=1;AS_SB=4,6,8,0;SC5=AACGT;AF=0.444444;ABQ=35.6202,35.5246;AMQ=60,60;AS_SS_BQ=36,35.3648,35.5246,0;AS_SS_MQ=60,60,60,0;PIR=0.549563,0.662369;ENT100=1.9023;NAB=79.1094,79.7512;NOI=0,0;CPG	GT:GL:GC:DP:M5mC	0/0:1:0.984375:18:0.666667
chr19	6105713	.	G	A	30	PASS	AD=14,4;BQ=34.7083;DP=18;MQ=60;MQ0=0;NS=1;AS_SB=12,2,0,4;SC5=ACGTC;AF=0.222222;ABQ=34.3303,36;AMQ=60,60;AS_SS_BQ=34.0441,36,0,36;AS_SS_MQ=60,60,0,60;PIR=0.622738,0.579252;ENT100=1.9023;NAB=79.4355,79.2543;NOI=0,0;CPG	GT:GL:GC:DP:M5mC	0/0:1:0.999756:18:0.666667
chr19	6105718	.	C	T	30	PASS	AD=17,1;BQ=32.6701;DP=18;MQ=60;MQ0=0;NS=1;AS_SB=11,6,1,0;SC5=ACCAC;AF=0.0555556;ABQ=32.4636,36;AMQ=60,60;AS_SS_BQ=30.766,35.3648,36,0;AS_SS_MQ=60,60,60,0;PIR=0.564561,0.772152;ENT100=1.9023;NAB=79.3596,79;NOI=0,0	GT:GL:GC:DP	0/0:1:0.984375:18
chr19	6105743	.	C	A	30	PASS	AD=16,1;BQ=32.7091;DP=17;MQ=60;MQ0=0;NS=1;AS_SB=9,7,1,0;SC5=AACCG;AF=0.0588235;ABQ=33.5336,14;AMQ=60,60;AS_SS_BQ=34.2604,32.5752,14,0;AS_SS_MQ=60,60,60,0;PIR=0.573465,0.620253;ENT100=1.9023;NAB=79.2567,79;NOI=0,0	GT:GL:GC:DP	0/0:1:0.992188:17
chr19	6105744	.	C	T	30	PASS	AD=8,8;BQ=35.7631;DP=16;MQ=60;MQ0=0;NS=1;AS_SB=2,6,8,0;SC5=ACCGG;AF=0.5;ABQ=35.5246,36;AMQ=60,60;AS_SS_BQ=36,35.3648,36,0;AS_SS_MQ=60,60,60,0;PIR=0.456023,0.632734;ENT100=1.9023;NAB=79.1352,79.5016;NOI=0,0;CPG	GT:GL:GC:DP:M5mC	0/0:1:0.984375:16:0.8
chr19	6105745	.	G	A	30	m_vaf;m_bq_ratio	AD=13,3;BQ=34.0367;DP=16;MQ=60;MQ0=0;NS=1;AS_SB=10,3,0,3;SC5=CCGGC;AF=0.1875;ABQ=34.805,30.485;AMQ=60,60;AS_SS_BQ=34.4384,36,0,30.485;AS_SS_MQ=60,60,0,60;PIR=0.604877,0.321286;ENT100=1.9023;NAB=79.2377,79.6681;NOI=0,0;CPG	GT:GL:GC:DP:M5mC	0/0:1:0.999023:16:0.5
chr19	6105748	.	A	T	30	PASS	AD=15,1;BQ=30.5819;DP=16;MQ=60;MQ0=0;NS=1;AS_SB=9,6,1,0;SC5=GCACC;AF=0.0625;ABQ=31.3773,14;AMQ=60,60;AS_SS_BQ=30.485,32.6701,14,0;AS_SS_MQ=60,60,60,0;PIR=0.590376,0.683544;ENT100=1.9023;NAB=79.3398,79;NOI=0,0	DP	16

----- stderr -----
[TIME] INFO rastair2::call: Wrote VCF output file="-"
[TIME] INFO rastair2: Call finished [DURATION]
